--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js"
+    "start": "nodemon ./src/app.js --exec babel-node -e js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +17,16 @@
     "url": "https://github.com/vuasancoggo222/nodeJS/issues"
   },
   "homepage": "https://github.com/vuasancoggo222/nodeJS#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.5"
   }
 }
